# zlink

./: CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md
.github/workflows/: bench.yml  rust.yml
zlink/: Cargo.toml
zlink-codegen/src/: error.rs  lib.rs
zlink-codegen/test-integration/: build.rs
zlink-codegen/test-integration/src/: lib.rs
zlink-core/: Cargo.toml
zlink-core/benches/: benchmarks.rs
zlink-core/src/: error.rs  json_ser.rs  lib.rs
zlink-core/src/connection/: mod.rs  read_connection.rs  write_connection.rs
zlink-core/src/connection/chain/: mod.rs
zlink-core/src/server/: mod.rs
zlink-macros/src/: lib.rs  reply_error.rs
zlink-macros/tests/: reply-error-derive.rs
zlink-smol/: Cargo.toml
zlink-smol/src/: lib.rs  notified.rs
zlink-smol/src/unix/: listener.rs  stream.rs
zlink-tokio/: Cargo.toml
zlink-tokio/src/: notified.rs
zlink/src/: lib.rs
zlink/tests/: lowlevel-ftl.rs
