[package]
name = "zlink-smol"
version = "0.1.1"
description = "zlink library for the smol runtime"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[features]
proxy = ["zlink-core/proxy"]
idl = ["zlink-core/idl"]
idl-parse = ["zlink-core/idl-parse"]
introspection = ["zlink-core/introspection"]
tracing = ["zlink-core/tracing"]
defmt = ["zlink-core/defmt"]

[dependencies]
zlink-core = { path = "../zlink-core", version = "=0.1.1", default-features = false, features = ["std"] }
futures-util = { version = "0.3.31", default-features = false, features = [
    "async-await",
    "alloc",
] }
futures-lite = "2.5"
async-io = "2.3"
async-broadcast = "0.7"
async-channel = "2.3"
pin-project-lite = "0.2"

[dev-dependencies]
smol = { version = "2.0" }
serde = { version = "1.0.218", default-features = false, features = ["derive"] }
serde_repr = "0.1.20"
test-log = { version = "0.2.17", default-features = false, features = [
    "trace",
    "color",
] }
tempfile = "3.14"
